# opencv-c-snap-example

./: CMakeLists.txt  README.md
snap/: snapcraft.yaml
src/: main.cpp
